# CI-CD-Observability-Stream

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  presentazione.ipynb  pyproject.toml
docs/: 00-Pipeline_Overview.md  01-Data_Ingestion_HowTo.md  02-Processing_Spark_Structured_Streaming.md  03-Machine_Learning_MLlib.md  04-Indexing_Elasticsearch.md  05-Visualization_Kibana.md
elastic_indexer/: Dockerfile  index_scored_events.py  query_observability.py  requirements.txt
jenkins/: Dockerfile  plugins.txt
jenkins/casc/: jenkins.yaml
jenkins/jobs/: seed.groovy
kibana/: export.ndjson
logstash/config/: logstash.yml
logstash/pipeline/: logstash.conf
otel-collector/: config.yaml
scripts/: consume_raw_topic.ps1  consume_raw_topic.sh
spark/: Dockerfile  process_stream.py  score_stream.py
spark/mllib_processor/: __init__.py  baseline_data.py  config.py  job.py  kafka_io.py  model.py  risk_model.py  schemas.py  session.py
spark/stream_processor/: __init__.py  config.py  job.py  kafka_io.py  rules.py  schemas.py  session.py  span_attributes.py  status.py  transforms.py
