[project]
name = "ci-cd_observability_stream"
version = "0.9.0"
description = "UniCT TAP project: A way to analyze events incoming from a CI/CD pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=9.4.0",
    "kafka>=1.3.5",
    "numpy<2",
    "pandas>=2.2,<3",
    "pyspark>=4.1.1",
]
